# GSK_POC_Document_Summarizer

./: .gitignore  AI_Document_Summarization_Engineering_Design_Specification.md  main.py  pyproject.toml  readme.md
src/: __init__.py  main.py
src/agents/: review.py  summarization.py
src/config/: settings.py
src/evaluation/: benchmark.py  bertscore.py  evaluate_llms.py  rouge.py
src/graph/: nodes.py  state.py  workflow.py
src/guardrails/: manager.py  pdf_validator.py  prompt_injection.py  text_validator.py
src/llm/: groq_client.py
src/prompts/: __init__.py  chunk_summary.txt  merge_summary.txt  review_summary.txt
src/rag/: chunker.py  cleaner.py  embeddings.py  loader.py  vectorstore.py
src/utils/: logger.py  prompt_loader.py
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_cleaner.py  test_guardrails.py  test_loader.py
